--- a/build
+++ b/build
@@ -8,6 +8,6 @@ gcc -Wall -Wextra -o bin/lisp \
     src/tokenize.c \
     src/parse.c \
     src/buildins.c \
-    src/exec.c \
+    src/resolve.c \
     src/stack.c
 
