--- a/build
+++ b/build
@@ -7,6 +7,7 @@ gcc -Wall -Wextra -o bin/lisp \
     src/list.c \
     src/tokenize.c \
     src/parse.c \
+    src/read.c \
     src/resolve.c \
     src/stack.c \
     src/buildins/compare.c \
