--- a/build
+++ b/build
@@ -1,9 +1,7 @@
 #!/bin/bash
 
-mkdir -p bin
-
-gcc -Wall -Wextra -o bin/lisp \
-    src/lisp.c \
+gcc -Wall -Wextra -o donkey \
+    src/main.c \
     src/list.c \
     src/tokenize.c \
     src/parse.c \
